--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start && cd api && py -3 -m flask run --no-debugger",
     "start-api": "cd api && py -3 -m flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
