--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "sass": "^1.45.2"
   },
   "scripts": {
     "start": "react-scripts start && cd api && py -3 -m flask run --no-debugger",
