--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-scripts": "^4.0.3",
-    "web-vitals": "^1.1.2",
-    "sass": "^1.45.2"
+    "sass": "^1.45.2",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start && cd api && py -3 -m flask run --no-debugger",
+    "start": "concurrently --kill-others \"npm run start-api\" \"npm run start-client\"",
+    "start-client": "react-scripts start",
     "start-api": "cd api && py -3 -m flask run --no-debugger",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^6.5.1",
     "jest": "^26.6.0",
     "sass": "^1.45.2"
   }
