--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^7.22.5",
     "react-scripts": "^4.0.3",
     "sass": "^1.45.2",
+    "concurrently": "^6.5.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
