--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "poll-day",
   "author":"Junyan Ye",
-  "description":"Polls that users are welcome to participate in. Theh poll is updated at semi-regular intervals.",
+  "description":"Polls that users are welcome to participate in. The poll is currently not updated or maintained.",
   "keywords":["survey"],
   "version": "1.1.3",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.15.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "d3": "^7.2.1",
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
